# framania

./: .gitignore  Pipfile  README.md  pytest.ini  requirements.txt  setup.cfg
.github/workflows/: tests.yml
framania/: __init__.py
framania/daskmania/: aggregate.py  api.py  filter.py  index.py  merge.py  meta.py  stack.py  string.py  util.py
framania/hvmania/: manager.py  server.py
framania/intakemania/: api.py  custom_class_parquet_source.py  extension.py  extention.py  jupyter.py  user_defined_class_parquet_source.py  util.py
framania/pandasmania/: aggregate.py  api.py  filter.py  merge.py  na.py  stack.py  string.py  transform.py  util.py
test/: test_api.py  test_illoc.py  test_intakemania_custom_class_paquet_source.py  test_intakemania_extension.py
test/data/: test-csv1.csv  test-csv2.csv
