[metadata]
name = framania
version = attr: framania.__version__
description = pandas/dask DataFrame API extension library
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LISENCE
author = Yuki Chiba
author_email = yuki-chiba@outlook.jp

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
  dask
  intake
  pandas
  pytest
  toolz
  cloudpickle
