[metadata]
name = framania
version = attr: framania.__version__
description = pandas/dask DataFrame API extension library
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LISENCE
author = Yuki Chiba
author_email = yuki-chiba@outlook.jp

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
  pandas>=1.3.4
  dask[complete]>=2022.1.0
  intake>=0.6.5
  intake-parquet>=0.2.3
  flask
  holoviews
  pytest
  toolz
  cloudpickle
